Odstranenie "paper*" suborov

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/web/app/js/paper-hole-rectangle.js
+/web/app/js/paper-hole-circle.js
+/web/app/js/paper-init.js
+/web/app/js/paper-app.js
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
